hot bug fixes for front end(add @CrossOrigin to controllers) finished result calculating