@@ -4,19 +4,16 @@ import com.epam.team1.emotional.help.dto.QuestionResponseDto;
 import com.epam.team1.emotional.help.dto.QuestionnaireResponseDto;
 import com.epam.team1.emotional.help.model.Question;
 import com.epam.team1.emotional.help.model.Questionnaire;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class QuestionnaireMapper {
 
     private final QuestionMapper questionMapper;
-
-    public QuestionnaireMapper(QuestionMapper questionMapper) {
-        this.questionMapper = questionMapper;
-    }
 
     public QuestionnaireResponseDto mapToResponseDto(Questionnaire questionnaire) {
         QuestionnaireResponseDto questionnaireResponseDTO = new QuestionnaireResponseDto();
@@ -28,6 +25,8 @@ public class QuestionnaireMapper {
     }
 
     private List<QuestionResponseDto> mapAll(List<Question> questions) {
-        return questions.stream().map(questionMapper::mapToResponseDto).collect(Collectors.toList());
+        return questions.stream()
+                .map(questionMapper::toQuestionResponseDto)
+                .toList();
     }
 }
